--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     }
+
+    body {
+        background: url(../images/background.jpg) no-repeat fixed center;
+        background-color: black;
+    }
     
+    header {
+        color: red;
+        padding-top: 20px;
+        text-align: center;
+        font-family: 'Press Start 2P', cursive;
+    }
+    
+    
+    h2  {
+        color: red;
+        text-align: center;
+        padding-top: 20px;
+        font-family: 'Press Start 2P', cursive;
+    }
+
+    #fight {
+        color: red;
+        text-align: center;
+        padding-top: 40px;
+    }
+
+    button {
+        background-color: black;
+        text-decoration: none;
+        display: inline-block;
+      }
+
+    button:hover {
+       cursor: pointer;
+       color: white;
+       font-weight: bold;
+    }
+
+    #fight:hover {
+        cursor: pointer;
+        color: white;
+        font-weight: bold;
+    }
+
+
+      
+
