--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -11,10 +11,34 @@ body {
 }
 
 header {
+    color: white;
+}
+
+#leftheader {
+    float: left;
+    padding-left: 20px;
+}
+
+#leftheader:hover {
+    color: white;
+}
+
+
+#rightheader {
+    color: white;
+    float: right;
+    padding-right: 20px;
+}
+
+#leftheader:hover {
+    color: white;
+}
+
+.title {
     padding: 10px;
 }
 
-header > h1 {
+.title > h1 {
     color: red;
     text-align: center;
 }
@@ -62,14 +86,14 @@ header > h1 {
     }
 
 .choices {
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: center;
 }
 
 .choice {
     border: 4px solid red;
     border-radius: 20%;
-    margin: 0 20px;
+    margin: 0 10px;
     padding: 5px;
     display: inline-block;
     transition: all 0.3s ease; 
