--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +8,7 @@
     body {
         background: url(../images/background.jpg) no-repeat fixed center;
         background-color: black;
+        color: white;
     }
     
     header {
@@ -24,16 +24,25 @@
         padding-top: 20px;
     }
 
+    h4  {
+        color: white;
+        text-align: center;
+        padding-top: 20px;
+    }
+
     #fight {
-        color: red;
+        color: white;
         text-align: center;
         padding-top: 40px;
     }
 
     button {
         background-color: black;
+        color: white;
         text-decoration: none;
         display: inline-block;
+        font-weight: bold;
+        font-size: 20px;
       }
 
     button:hover {
