--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -11,8 +11,10 @@ body {
 }
 
 header {
-    color: white;
+    color: #feda4a;
 }
+
+
 
 #leftheader {
     color: white;
@@ -42,26 +44,26 @@ header {
 }
 
 .title > h1 {
-    color: red;
-    text-align: center;
+        color: #feda4a;
+        text-align: center;
 }
 
 .score-board {
     margin: 10px auto;
-    border: 3px solid red;
+    border: 3px solid #feda4a;
     border-radius: 4px;
     text-align: center;
     width: 300px;
-    color: red;
+    color: #feda4a;
     font-size: 46px;
     padding: 16px 20px;
     position:relative;
 }
 
 .badge {
-    background: red;
-    border: 1px solid red;
-    color: white;
+    background: #feda4a;
+    border: 1px solid #feda4a;
+    color: black;
     font-size: 14px;
     padding: 0px 0px;
 }
@@ -80,7 +82,7 @@ header {
 
 .result {
     font-size: 35px;
-    color: red;
+    color: #feda4a;
 }
 
 .result > p {
@@ -94,26 +96,26 @@ header {
 }
 
 .choice {
-    border: 4px solid red;
+    border: 4px solid #feda4a;
     border-radius: 20%;
     margin: 0 10px;
     padding: 5px;
     display: inline-block;
     transition: all 0.3s ease; 
-    color:red;
+    color:#feda4a;
     font-size: 10px;
 }
 
 .choice:hover {
     cursor: pointer;
-    background: red;
+    background: #feda4a;
     color: white;
     font-weight: bold;
 }
 
 #action-message {
     text-align: center;
-    color: red;
+    color: #feda4a;
     font-weight: bold;
     font-size: 20px;
     margin-top: 20px;
